--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-nodemon": "^0.2.1",
     "grunt-shell": "^0.6.4",
     "less-middleware": "1.0.x",
+    "mongoose": "^3.8.9",
     "request": "^2.34.0"
   }
 }
