--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-shell": "^0.6.4",
     "less-middleware": "1.0.x",
     "mongoose": "^3.8.9",
-    "request": "^2.34.0"
+    "request": "^2.34.0",
+    "twilio": "^1.6.0"
   }
 }
