--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "angular-route": "~1.2.16",
-    "angular": "~1.2.16"
+    "angular": "~1.2.16",
+    "angular-ui-router": "~0.2.10"
   }
 }
